# Templates

./: .gitignore  Cargo.toml  Test1.java  build.sh  make_header.sh  run.sh  test1_Test1.cpp  test1_Test1.h  text.txt
Templates/: Cargo.toml
Templates/scripts/: create_db.sh
Templates/src/: .env  main.rs
Templates/src/api/: root.rs
Templates/src/api/handlers/: authontication_token.rs  mod.rs  models.rs  user_scope.rs
Templates/src/models/: user.rs
src/: .env.example  app_state.rs  main.rs
src/api/: mod.rs
src/api/extractors/: mod.rs
src/api/handlers/: user_handlers.rs
src/handlers/: example.rs  mod.rs
src/migrations/: 20230424165626_create_user_table.sql
src/models/: mod.rs
