[package]
name = "actix_jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
sqlx = {version = "0.6.2", features = ["runtime-actix-rustls","postgres","macros"]}
serde = { version = "1.0.145",features = ["derive"]}
dotenv = {version="0.15.0"}
log = "^0.4"
jsonwebtoken = "8.1.1"
chrono = "0.4.22"

[package.metadata.scripts]
db_create = "bash ./scripts/create_db.sh"
db_start = ""
db_stop = ""
db_remove = ""
